# AstrologAsStar

./: .gitignore  CMakeLists.txt  README.md
astrolog32/: astrolog.cpp  astrolog.h  version.h
astrolog32/TransU/: TransU.cpp  TransU.h
astrolog32/swe/inc/: swedll.h  swephexp.h
astrolog32/swe/lib/windows/: swedll32.lib
astrolog32/useswe/: useswe.cpp  useswe.h
